Closed
Bug 1022206
Opened 12 years ago
Closed 12 years ago
widget/cocoa/nsChildView.mm:405:44: error: use of undeclared identifier 'nsLayoutUtils'
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: MatsPalmgren_bugz, Unassigned)
References
Details
My local DEBUG m-c fails to build. I suspect the problem might be hidden
on tbpl because of unified builds chunking or something...
(fwiw, adding an #include nsLayoutUtils.h fixed it)
widget/cocoa/nsChildView.mm:405:44: error: use of undeclared identifier 'nsLayoutUtils'
nsCOMPtr<nsIContent> targetContent = nsLayoutUtils::FindContentFor(mFrameMetrics.GetScrollId());
Comment 1•12 years ago
|
||
Looks like that was added in http://hg.mozilla.org/mozilla-central/rev/2dd00ac41fbe (bug 944938)
Comment 2•12 years ago
|
||
In my build, nsChildView.mm includes nsLayoutUtils.h through this include chain:
nsChildView.mm -> nsAccessibilityService.h -> SelectionManager.h -> nsIFrame.h -> nsLayoutUtils.h
Are you building with --disable-accessibility?
| Reporter | ||
Comment 3•12 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #2)
> Are you building with --disable-accessibility?
Correct. (sorry for failing to mention it's a non-default mozconfig)
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in
before you can comment on or make changes to this bug.
Description
•